fix overlap bug

--- a/public/styles/search-list.css
+++ b/public/styles/search-list.css
@@ -23,6 +23,7 @@
     transition: all 500ms;
     max-height: 35vh;
     overflow-y: scroll;
+    z-index: 100;
 }
 
 .indeed-results{
